 - allow specifying source by position but target by ID for Spring.GetUnitWeaponHaveFreeLineOfFire

Misc:
 - remove joystick support
 - detect hangs during filesystem initialisation
 - fix stale thread-id cache in watchdog after reload
 - make LuaVFSDownload rescan archives in main thread, and do so when a download finishes (not when one starts)
 - remove /adv{map,model}shading commands



-- 104.0 --------------------------------------------------------
Major:
 - Add LuaMenu - an unsynced stripped down Lua environment that starts before the game is loaded and persists through reload
   this environment receives the Draw{Genesis,Screen,ScreenPost} callins as well as
   a special AllowDraw FPS limiter which enables these if true is returned from it
   (otherwise they are called once every 30 seconds)
 ! make GL3.0 the minimum required OpenGL version; Intel G45's and other relics are now banned
   (any driver that claims support for this *and* shaders is allowed to run Spring unimpeded)
 - improve memory management so Spring.Reload can be safely called multiple times in a row
 - kill various desyncs that slipped into 103.0

Misc:
 - Assorted bugfixes and optimisations
 - force regeneration of ArchiveCache
 - Implement VFS modes - VFS.MOD, VFS.MAP & VFS.BASE now actually work. Added VFS.MENU
 ! base archives now have modtype of 4 and menu archive have modtype of 5
 ! one letter command-line flags (e.g. -g instead of --game) are removed
 - generally more detailed error-logging
 - continued internal cleanup and C++11 adoption to reduce unnecessary data copying and allocing
 - don't load-then-immediately-free the LuaGaia handler if neither (synced or unsynced) entrypoint exists
 - don't record non-essential profile data in the background if not in /debug mode; reset profiler on reload
 - replace dozens of STL containers with faster custom alternatives
 - use pooled memory allocations in several engine components
 - make Use{V,P}BO=0 reuse buffers when downsized